plugins {
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.86' apply false
}

subprojects {
    apply plugin: "net.neoforged.moddev"

    repositories {
        maven { url "https://maven.parchmentmc.org" }
        maven { url "https://maven.theillusivec4.top/" }
        maven { url "https://maven.shedaniel.me/" }
        maven { url "https://jitpack.io" }
    }

    dependencies {
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21

        toolchain.languageVersion = JavaLanguageVersion.of(21)
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.release = 21
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}